[package]
name = "wt_sensor"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wt_blk = "0.0.2"
#wt_blk = {path = "../wt_blk"}
wt_blk = { git = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk" }
serde_json = "^1.0.91"