[package]
name = "wt_sensor"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
reflect = ["dep:bevy_reflect"]

[dependencies]
wt_blk = "0.0.5"
serde_json = "^1.0.91"
strum = "^0.24.1"
strum_macros = "^0.24.3"

[dependencies.bevy_reflect]
version = "^0.9.1"
optional = true